--- a/index.html
+++ b/index.html
@@ -2,79 +2,65 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" type="text/css" href="style.css">
   
   <title>Frontend Mentor | Time tracking dashboard</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-
-  Report for
-  Jeremy Robson
-
-  Daily
-  Weekly
-  Monthly
-
-  Work
-  5hrs <!-- daily -->
-  Previous - 7hrs <!-- daily -->
-  32hrs <!-- weekly -->
-  Previous - 36hrs <!-- weekly -->
-  103hrs <!-- monthly -->
-  Previous - 128hrs <!-- monthly -->
-
-  Play
-  1hr <!-- daily -->
-  Previous - 2hrs <!-- daily -->
-  10hrs <!-- weekly -->
-  Previous - 8hrs <!-- weekly -->
-  23hrs <!-- monthly -->
-  Previous - 29hrs <!-- monthly -->
-
-  Study
-  0hrs <!-- daily -->
-  Previous - 1hr <!-- daily -->
-  4hrs <!-- weekly -->
-  Previous - 7hrs <!-- weekly -->
-  13hrs <!-- monthly -->
-  Previous - 19hrs <!-- monthly -->
-
-  Exercise
-  1hr <!-- daily -->
-  Previous - 1hr <!-- daily -->
-  4hrs <!-- weekly -->
-  Previous - 5hrs <!-- weekly -->
-  11hrs <!-- monthly -->
-  Previous - 18hrs <!-- monthly -->
-
-  Social
-  1hr <!-- daily -->
-  Previous - 3hrs <!-- daily -->
-  5hrs <!-- weekly -->
-  Previous - 10hrs <!-- weekly -->
-  21hrs <!-- monthly -->
-  Previous - 23hrs <!-- monthly -->
-
-  Self Care
-  0hrs <!-- daily -->
-  Previous - 1hr <!-- daily -->
-  2hrs <!-- weekly -->
-  Previous - 2hrs <!-- weekly -->
-  7hrs <!-- monthly -->
-  Previous - 11hrs <!-- monthly -->
-
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  <main class="parent">
+      <!-- container  -->
+      <div class="left-div">
+        <div class="user-profile">
+          <img src="images/image-jeremy.png" alt="person-img" draggable="false" oncontextmenu="return false">
+          <div>
+            <p class="report">Report for</p>
+            <p class="user-name">Jeremy Robson</p>
+          </div>
+        </div>
+        <div class="user-data-period">
+          <p class="daily">Daily</p>
+          <p class="weekly">Weekly</p>
+          <p class="monthly">Monthly</p>
+        </div>
+      </div>
+      <!-- container end -->
+      <!-- progress table -->
+      <div class="right-div">
+        <div class="div1 boxbox"><div class="inner-div">
+          <div class="work-head"><span class="work-division">Work</span><img src="images/icon-ellipsis.svg" alt="lolo"></div>
+          <p></p>
+          <p></p>
+        </div></div>
+        <div class="div2 boxbox"><div class="inner-div">
+          <div class="work-head"><span class="work-division">Play</span><img src="images/icon-ellipsis.svg"></div>
+          <p></p>
+          <p></p>
+        </div></div>
+        <div class="div3 boxbox"><div class="inner-div">
+          <div class="work-head"><span class="work-division">Study</span><img src="images/icon-ellipsis.svg"></div>
+          <p></p>
+          <p></p>
+        </div></div>
+        <div class="div4 boxbox"><div class="inner-div">
+          <div class="work-head"><span class="work-division">Exercise</span><img src="images/icon-ellipsis.svg"></div>
+          <p></p>
+          <p></p>
+        </div></div>
+        <div class="div5 boxbox"><div class="inner-div">
+          <div class="work-head"><span class="work-division">Social</span><img src="images/icon-ellipsis.svg"></div>
+          <p></p>
+          <p></p>
+        </div></div>
+        <div class="div6 boxbox"><div class="inner-div">
+          <div class="work-head"><span class="work-division">Self Care</span><img src="images/icon-ellipsis.svg"></div>
+          <p></p>
+          <p></p>
+        </div></div>
+      </div>
+      <!-- progress table end -->
+  </main>
 </body>
 </html>
